codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__cyber_policy_error_event_available_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
ⓘ This content can’t be shown
  Daybreak is currently off. If you’re doing authorized security work, turn it
  on and try your request again.
  Learn more: https://help.openai.com/en/articles/20001326

ⓘ This content can’t be shown
  Some cybersecurity requests are still limited, even when Daybreak is on.
  Learn more: https://help.openai.com/en/articles/20001326
