codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__cyber_policy_error_event_individual_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
ⓘ This content can't be shown
  We take extra caution with cybersecurity requests. If you’re a security
  professional, you may be able to apply for Trusted Access.
  Trusted Access: https://chatgpt.com/cyber/
  Learn more: https://help.openai.com/en/articles/20001326
